Update: Added dependencies